# RL4Sys

./: .gitignore  .gitmodules  CLAUDE.md  README.md  __init__.py  action.py  agent.py  agent_tensorboard.py  conf_loader.py  config.json  cpu_plot.py  dqn_lunarlander.pth  mem.csv  memory_plot.py  model_size_log.csv  observation.py  performance_plot.py  pull_cloudlab.sh  reply_buffer.py  requirements.txt  run.txt  server_handle.txt  setup.py  start_lustre_rl.sh  sync_cloudlab.sh  training_server.py  training_tensorboard.py  trajectory.py
.cursor/rules/: general-rule.mdc  rl4sys-cursor-rule.mdc
_common/_algorithms/: BaseAlgorithm.py  BaseKernel.py  BaseReplayBuffer.py
_common/_examples/: BaseApplication.py
_common/_rl4sys/: BaseAction.py  BaseAgent.py  BaseTrainingServer.py  BaseTrajectory.py
algorithms/C51/: C51.py  kernel.py  replay_buffer.py
algorithms/DDPG/: DDPG.py  kernel.py  replay_buffer.py
algorithms/DQN/: DQN.py  kernel.py  replay_buffer.py  stale_replay_buffer.py
algorithms/DQN_stable/: DQN_stable.py
algorithms/PPO/: PPO.py  kernel.py  replay_buffer.py
algorithms/PPO_stable/: PPO_stable.py
algorithms/REINFORCE/: REINFORCE.py  kernel.py  replay_buffer.py
algorithms/RPO/: RPO.py  kernel.py  replay_buffer.py
algorithms/SAC/: SAC.py  kernel.py  replay_buffer.py
algorithms/TD3/: TD3.py  kernel.py  replay_buffer.py
algorithms/_common/: BaseAlgorithm.py  BaseKernel.py  BaseReplayBuffer.py
algorithms/common/: BaseAlgorithm.py  BaseKernel.py  BaseReplayBuffer.py
algorithms_baseline/: DQN_baseline.py  PPO_baseline.py  SAC_baseline.py
algorithms_baseline/spinup/: __init__.py  run.py
client/: CMakeLists.txt  agent.py  agent_old.py  client.py
cputest/20250718_163434/: job_main 10 traj send_cpu_profile_20250718_163434.csv
cputest/20250718_163517/: job_main 10 traj send_cpu_profile_20250718_163517.csv
cputest/20250718_164806/: job_main 10 traj send_cpu_profile_20250718_164806.csv
cputest/20250718_165233/: job_main 10 traj send_cpu_profile_20250718_165233.csv
cputest/20250718_170118/: job_main 10 traj send_cpu_profile_20250718_170118.csv
cputest/20250718_170232/: job_main 10 traj send_cpu_profile_20250718_170232.csv
cputest/20250718_170629/: job_main 10 traj send_cpu_profile_20250718_170629.csv
cputest/20250718_170742/: job_main 10 traj send_cpu_profile_20250718_170742.csv
cputest/20250718_170955/: job_main 10 traj send_cpu_profile_20250718_170955.csv
cputest/20250720_131134/: job_main 10 traj send_cpu_profile_20250720_131134.csv
cputest/20250720_131152/: job_main 10 traj send_cpu_profile_20250720_131152.csv
cputest/20250720_131210/: job_main 10 traj send_cpu_profile_20250720_131210.csv
cputest/20250720_131227/: job_main 10 traj send_cpu_profile_20250720_131227.csv
cputest/20250720_131245/: job_main 10 traj send_cpu_profile_20250720_131245.csv
cputest/20250720_131304/: job_main 10 traj send_cpu_profile_20250720_131304.csv
cputest/20250720_131700/: job_main 10 traj send_cpu_profile_20250720_131700.csv
cputest/20250720_131707/: job_main 10 traj send_cpu_profile_20250720_131707.csv
cputest/20250721_085552/: job_main_rand 100 traj send_cpu_profile_20250721_085552.csv
cputest/20250721_091819/: job_main_infer 100 traj send_cpu_profile_20250721_091819.csv
cputest/20250721_091912/: job_main 10 traj send_cpu_profile_20250721_091912.csv
cputest/20250721_093201/: job_main_infer 100 traj send_cpu_profile_20250721_093201.csv
cputest/20250721_100321/: rllib_client_job_cpu_profile_20250721_100321.csv
cputest/20250721_100700/: rllib_client_job_remote_cpu_profile_20250721_100700.csv
cputest/20250721_104439/: job_main 10 traj send_cpu_profile_20250721_104440.csv
cputest/20250721_110052/: job_main_rand 100 traj send_cpu_profile_20250721_110052.csv
cputest/20250721_110112/: job_main_infer 100 traj send_cpu_profile_20250721_110113.csv
cputest/20250721_110136/: job_main 10 traj send_cpu_profile_20250721_110136.csv
cputest/20250721_110807/: rllib_client_job_remote_cpu_profile_20250721_110807.csv
cputest/20250721_111152/: rllib_client_job_local_cpu_profile_20250721_111152.csv
cputest/20250723_081520/: job_main 10 traj send_cpu_profile_20250723_081520.csv
cputest/20250723_082122/: job_main 10 traj send_cpu_profile_20250723_082122.csv
cputest/20250723_082531/: job_main 10 traj send_cpu_profile_20250723_082531.csv
cputest/20250723_083239/: job_main 10 traj send_cpu_profile_20250723_083239.csv
cputest/20250723_083240/: job_main 10 traj send_cpu_profile_20250723_083240.csv
cputest/20250723_084142/: job_main 10 traj send_cpu_profile_20250723_084143.csv
cputest/20250723_084234/: job_main 10 traj send_cpu_profile_20250723_084234.csv
cputest/20250723_084313/: job_main 10 traj send_cpu_profile_20250723_084313.csv
cputest/20250723_084401/: job_main 10 traj send_cpu_profile_20250723_084401.csv
cputest/20250723_084446/: job_main 10 traj send_cpu_profile_20250723_084446.csv
examples/: plot.py
grpc_test/: CMakeLists.txt  client.cpp  helloworld.proto  server.cpp
models/: kernel_ac.py
protocol/: action.py  traj_client.py  traj_server.py  trajectory.proto  trajectory.py  trajectory_pb2.py  trajectory_pb2.pyi  trajectory_pb2_grpc.py
rl4sys/: __init__.py  start_server.py
rl4sys/cppclient/: CMakeLists.txt  IMPLEMENTATION_NOTES.md  README.md
rl4sys/cppclient/examples/: lunar_lander_cpp_main.cpp
rl4sys/cppclient/include/: config_loader.h  logger.h  model_manager.h  pytorch_model_wrapper.h  rl4sys_agent.h  rl4sys_stub_wrapper.h  rl4sys_types.h  util.h
rl4sys/cppclient/include/utils/: compression.h
rl4sys/cppclient/src/: config_loader.cpp  dqn_model.cpp  logger.cpp  model_manager.cpp  ppo_model.cpp  pytorch_model_wrapper.cpp  rl4sys_agent.cpp  rl4sys_stub_wrapper.cpp  rl4sys_types.cpp  util.cpp
rl4sys/cppclient/src/utils/: compression.cpp
rl4sys/cppclient/test/: rl4sys_agent_test.cpp  test_conf.json
server/: training_server.py
utils/: conf_loader.py  logger.py  monitor.py  plot.py  symbolic_param_search.py  symbolic_parameter_search.py  tensorboard_writer.py  util.py
(+3270 files in other folders)
